--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
+    <!-- splide -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css"
+    />
 
     <!-- mutated css -->
     <link rel="stylesheet" href="./Styling/nav.css" />
@@ -25,6 +30,7 @@
     <link rel="stylesheet" href="./Styling/justin.css" />
     <link rel="stylesheet" href="./Styling/featured.css" />
     <link rel="stylesheet" href="./Styling/footer.css" />
+    <link rel="stylesheet" href="./Styling/slides.css" />
 
     <title>SneakrZ</title>
   </head>
@@ -37,5 +43,6 @@
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
       crossorigin="anonymous"
     ></script>
+    <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js"></script>
   </body>
 </html>
