--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <link rel="stylesheet" href="./Styling/featured.css" />
     <link rel="stylesheet" href="./Styling/footer.css" />
     <link rel="stylesheet" href="./Styling/slides.css" />
+    <link rel="stylesheet" href="./Styling/login.css" />
 
     <title>SneakrZ</title>
   </head>
