--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <link rel="stylesheet" href="./Styling/footer.css" />
     <link rel="stylesheet" href="./Styling/slides.css" />
     <link rel="stylesheet" href="./Styling/login.css" />
+    <link rel="stylesheet" href="./Styling//sign.css" />
 
     <title>SneakrZ</title>
   </head>
