add the user profile

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
     <link rel="stylesheet" href="./Styling/footer.css" />
     <link rel="stylesheet" href="./Styling/slides.css" />
     <link rel="stylesheet" href="./Styling/login.css" />
-    <link rel="stylesheet" href="./Styling//sign.css" />
+    <link rel="stylesheet" href="./Styling/sign.css" />
+    <link rel="stylesheet" href="./Styling/userprofile.css" />
 
     <title>SneakrZ</title>
   </head>
